--- a/wordpress/wp-content/themes/mapaction/sass/elements/_page_content_mixin.scss
+++ b/wordpress/wp-content/themes/mapaction/sass/elements/_page_content_mixin.scss
@@ -48,6 +48,7 @@
 	ul {
 		list-style: none;
 		margin-left: 0;
+		padding-left: $gutter-size;
 		li {
 			&::before {
 				content: "";
@@ -59,6 +60,7 @@
 				border-radius: 50%;
 				position: relative;
 				top: -0.1em;
+				margin-left: -1em;
 			}
 		}
 	}
